--- a/package.json
+++ b/package.json
@@ -76,12 +76,15 @@
     "lodash": "4.17.11",
     "minimist": "1.2.0",
     "prop-types": "15.6.2",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
+    "react": "^16.8.0-alpha.1",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
+    "react-styled-carousel": "^0.4.12",
+    "rebass": "^3.0.1",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.2",
@@ -89,7 +92,7 @@
     "sanitize.css": "4.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
-    "styled-components": "4.0.2",
+    "styled-components": "^4.0.2",
     "warning": "4.0.2"
   },
   "devDependencies": {
@@ -105,13 +108,13 @@
     "@babel/register": "7.0.0",
     "add-asset-html-webpack-plugin": "3.1.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "8.0.4",
     "babel-plugin-dynamic-import-node": "2.2.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-react-transform": "3.0.0",
-    "babel-plugin-styled-components": "1.8.0",
+    "babel-plugin-styled-components": "^1.8.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.19",
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
@@ -121,15 +124,15 @@
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "enzyme-to-json": "3.3.4",
-    "eslint": "5.7.0",
-    "eslint-config-airbnb": "17.1.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.1.0",
     "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "3.0.0",
-    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-redux-saga": "0.9.0",
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
