Added OurServices and Events sections to HomePage container * OurServices explains what we do at KES * Events fetches our upcoming and pasts events from Eventbrite * Also added comments to improve code readability

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
@@ -73,7 +74,7 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "loadable-components": "2.2.3",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.11",
     "minimist": "1.2.0",
     "prop-types": "15.6.2",
     "react": "^16.8.0-alpha.1",
@@ -154,7 +155,7 @@
     "rimraf": "2.6.2",
     "shelljs": "^0.8.2",
     "style-loader": "0.23.1",
-    "stylelint": "9.6.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.5.0",
